syntax = "proto3";
package gitopia.gitopia.gitopia;

import "gogoproto/gogo.proto";
import "gitopia/task.proto";
import "gitopia/branch.proto";
import "gitopia/tag.proto";
import "gitopia/member.proto";
import "gitopia/bounty.proto";
// this line is used by starport scaffolding # proto/tx/import
import "gitopia/release.proto";
import "gitopia/pullRequest.proto";
import "gitopia/dao.proto";
import "gitopia/comment.proto";
import "gitopia/issue.proto";
import "gitopia/repository.proto";
import "gitopia/whois.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gitopia/attachment.proto";
import "gitopia/reaction.proto";

option go_package = "github.com/gitopia/gitopia/x/gitopia/types";

// Msg defines the Msg service.
service Msg {
  // this line is used by starport scaffolding # proto/tx/rpc
  rpc RevokeProviderPermission(MsgRevokeProviderPermission) returns (MsgRevokeProviderPermissionResponse);
  rpc AuthorizeProvider(MsgAuthorizeProvider) returns (MsgAuthorizeProviderResponse);
  rpc CreateTask(MsgCreateTask) returns (MsgCreateTaskResponse);
  rpc UpdateTask(MsgUpdateTask) returns (MsgUpdateTaskResponse);
  rpc DeleteTask(MsgDeleteTask) returns (MsgDeleteTaskResponse);
  rpc SetBranch(MsgSetBranch) returns (MsgSetBranchResponse);
  rpc MultiSetBranch(MsgMultiSetBranch) returns (MsgMultiSetBranchResponse);
  rpc DeleteBranch(MsgDeleteBranch) returns (MsgDeleteBranchResponse);
  rpc MultiDeleteBranch(MsgMultiDeleteBranch) returns (MsgMultiDeleteBranchResponse);
  rpc SetTag(MsgSetTag) returns (MsgSetTagResponse);
  rpc MultiSetTag(MsgMultiSetTag) returns (MsgMultiSetTagResponse);
  rpc DeleteTag(MsgDeleteTag) returns (MsgDeleteTagResponse);
  rpc MultiDeleteTag(MsgMultiDeleteTag) returns (MsgMultiDeleteTagResponse);
  rpc AddMember(MsgAddMember) returns (MsgAddMemberResponse);
  rpc UpdateMemberRole(MsgUpdateMemberRole) returns (MsgUpdateMemberRoleResponse);
  rpc RemoveMember(MsgRemoveMember) returns (MsgRemoveMemberResponse);
  rpc CreateBounty(MsgCreateBounty) returns (MsgCreateBountyResponse);
  rpc UpdateBountyExpiry(MsgUpdateBountyExpiry) returns (MsgUpdateBountyExpiryResponse);
  rpc CloseBounty(MsgCloseBounty) returns (MsgCloseBountyResponse);
  rpc DeleteBounty(MsgDeleteBounty) returns (MsgDeleteBountyResponse);
// this line is used by starport scaffolding # proto/tx/rpc
  rpc CreateRelease(MsgCreateRelease) returns (MsgCreateReleaseResponse);
  rpc UpdateRelease(MsgUpdateRelease) returns (MsgUpdateReleaseResponse);
  rpc DeleteRelease(MsgDeleteRelease) returns (MsgDeleteReleaseResponse);
  rpc CreatePullRequest(MsgCreatePullRequest) returns (MsgCreatePullRequestResponse);
  rpc UpdatePullRequestTitle(MsgUpdatePullRequestTitle) returns (MsgUpdatePullRequestTitleResponse);
  rpc UpdatePullRequestDescription(MsgUpdatePullRequestDescription) returns (MsgUpdatePullRequestDescriptionResponse);
  rpc InvokeMergePullRequest(MsgInvokeMergePullRequest) returns (MsgInvokeMergePullRequestResponse);
  rpc SetPullRequestState(MsgSetPullRequestState) returns (MsgSetPullRequestStateResponse);
  rpc AddPullRequestReviewers(MsgAddPullRequestReviewers) returns (MsgAddPullRequestReviewersResponse);
  rpc RemovePullRequestReviewers(MsgRemovePullRequestReviewers) returns (MsgRemovePullRequestReviewersResponse);
  rpc AddPullRequestAssignees(MsgAddPullRequestAssignees) returns (MsgAddPullRequestAssigneesResponse);
  rpc RemovePullRequestAssignees(MsgRemovePullRequestAssignees) returns (MsgRemovePullRequestAssigneesResponse);
  rpc LinkPullRequestIssueByIid(MsgLinkPullRequestIssueByIid) returns (MsgLinkPullRequestIssueByIidResponse);
  rpc UnlinkPullRequestIssueByIid(MsgUnlinkPullRequestIssueByIid) returns (MsgUnlinkPullRequestIssueByIidResponse);
  rpc AddPullRequestLabels(MsgAddPullRequestLabels) returns (MsgAddPullRequestLabelsResponse);
  rpc RemovePullRequestLabels(MsgRemovePullRequestLabels) returns (MsgRemovePullRequestLabelsResponse);
  rpc DeletePullRequest(MsgDeletePullRequest) returns (MsgDeletePullRequestResponse);
  rpc CreateDao(MsgCreateDao) returns (MsgCreateDaoResponse);
  rpc RenameDao(MsgRenameDao) returns (MsgRenameDaoResponse);
  rpc UpdateDaoDescription(MsgUpdateDaoDescription) returns (MsgUpdateDaoDescriptionResponse);
  rpc UpdateDaoWebsite(MsgUpdateDaoWebsite) returns (MsgUpdateDaoWebsiteResponse);
  rpc UpdateDaoLocation(MsgUpdateDaoLocation) returns (MsgUpdateDaoLocationResponse);
  rpc UpdateDaoAvatar(MsgUpdateDaoAvatar) returns (MsgUpdateDaoAvatarResponse);
  rpc DeleteDao(MsgDeleteDao) returns (MsgDeleteDaoResponse);
  rpc CreateComment(MsgCreateComment) returns (MsgCreateCommentResponse);
  rpc UpdateComment(MsgUpdateComment) returns (MsgUpdateCommentResponse);
  rpc DeleteComment(MsgDeleteComment) returns (MsgDeleteCommentResponse);
  rpc CreateIssue(MsgCreateIssue) returns (MsgCreateIssueResponse);
  rpc UpdateIssueTitle(MsgUpdateIssueTitle) returns (MsgUpdateIssueTitleResponse);
  rpc UpdateIssueDescription(MsgUpdateIssueDescription) returns (MsgUpdateIssueDescriptionResponse);
  rpc ToggleIssueState(MsgToggleIssueState) returns (MsgToggleIssueStateResponse);
  rpc AddIssueAssignees(MsgAddIssueAssignees) returns (MsgAddIssueAssigneesResponse);
  rpc RemoveIssueAssignees(MsgRemoveIssueAssignees) returns (MsgRemoveIssueAssigneesResponse);
  rpc AddIssueLabels(MsgAddIssueLabels) returns (MsgAddIssueLabelsResponse);
  rpc RemoveIssueLabels(MsgRemoveIssueLabels) returns (MsgRemoveIssueLabelsResponse);
  rpc DeleteIssue(MsgDeleteIssue) returns (MsgDeleteIssueResponse);
  rpc CreateRepository(MsgCreateRepository) returns (MsgCreateRepositoryResponse);
  rpc InvokeForkRepository(MsgInvokeForkRepository) returns (MsgInvokeForkRepositoryResponse);
  rpc ForkRepository(MsgForkRepository) returns (MsgForkRepositoryResponse);
  rpc ForkRepositorySuccess(MsgForkRepositorySuccess) returns (MsgForkRepositorySuccessResponse);
  rpc RenameRepository(MsgRenameRepository) returns (MsgRenameRepositoryResponse);
  rpc UpdateRepositoryDescription(MsgUpdateRepositoryDescription) returns (MsgUpdateRepositoryDescriptionResponse);
  rpc ChangeOwner(MsgChangeOwner) returns (MsgChangeOwnerResponse);
  rpc UpdateRepositoryCollaborator(MsgUpdateRepositoryCollaborator) returns (MsgUpdateRepositoryCollaboratorResponse);
  rpc RemoveRepositoryCollaborator(MsgRemoveRepositoryCollaborator) returns (MsgRemoveRepositoryCollaboratorResponse);
  rpc CreateRepositoryLabel(MsgCreateRepositoryLabel) returns (MsgCreateRepositoryLabelResponse);
  rpc UpdateRepositoryLabel(MsgUpdateRepositoryLabel) returns (MsgUpdateRepositoryLabelResponse);
  rpc DeleteRepositoryLabel(MsgDeleteRepositoryLabel) returns (MsgDeleteRepositoryLabelResponse);
  rpc SetDefaultBranch(MsgSetDefaultBranch) returns (MsgSetDefaultBranchResponse);
  rpc ToggleRepositoryForking(MsgToggleRepositoryForking) returns (MsgToggleRepositoryForkingResponse);
  rpc ToggleArweaveBackup(MsgToggleArweaveBackup) returns (MsgToggleArweaveBackupResponse);
  rpc DeleteRepository(MsgDeleteRepository) returns (MsgDeleteRepositoryResponse);
  rpc CreateUser(MsgCreateUser) returns (MsgCreateUserResponse);
  rpc UpdateUserUsername(MsgUpdateUserUsername) returns (MsgUpdateUserUsernameResponse);
  rpc UpdateUserName(MsgUpdateUserName) returns (MsgUpdateUserNameResponse);
  rpc UpdateUserBio(MsgUpdateUserBio) returns (MsgUpdateUserBioResponse);
  rpc UpdateUserAvatar(MsgUpdateUserAvatar) returns (MsgUpdateUserAvatarResponse);
  rpc DeleteUser(MsgDeleteUser) returns (MsgDeleteUserResponse);
  // rpc TransferUser(MsgTransferUser) returns (MsgTransferUserResponse);
  rpc UpdateRepositoryBackupRef(MsgUpdateRepositoryBackupRef) returns (MsgUpdateRepositoryBackupRefResponse);
  rpc AddRepositoryBackupRef(MsgAddRepositoryBackupRef) returns (MsgAddRepositoryBackupRefResponse);
}

enum ProviderPermission {
  GIT_SERVER = 0;
  STORAGE = 1;
}

message MsgRevokeProviderPermission {
  string creator = 1;
  string granter = 2;
  string provider = 3;
  ProviderPermission permission = 4;
}

message MsgRevokeProviderPermissionResponse {}

message MsgAuthorizeProvider {
  string creator = 1;
  string granter = 2;
  string provider = 3;
  ProviderPermission permission = 4;
}

message MsgAuthorizeProviderResponse {}

message MsgCreateTask {
  string creator = 1;
  TaskType taskType = 2;
  string provider = 3;
}

message MsgCreateTaskResponse {
  uint64 id = 1;
}

message MsgUpdateTask {
  string creator = 1;
  uint64 id = 2;
  TaskState state = 3;
  string message = 4;
}

message MsgUpdateTaskResponse {}

message MsgDeleteTask {
  string creator = 1;
  uint64 id = 2;
}

message MsgUpdateRepositoryBackupRef {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  RepositoryBackup.Store store = 3;
  string ref = 4;
}

message MsgUpdateRepositoryBackupRefResponse {
}

message MsgAddRepositoryBackupRef {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  RepositoryBackup.Store store = 3;
  string ref = 4;
}

message MsgAddRepositoryBackupRefResponse {
}

message MsgDeleteTaskResponse {}
message MsgDeleteStorageProviderResponse {}

message MsgSetBranch {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  Branch branch = 3 [(gogoproto.nullable) = false];
  message Branch { 
    string name = 1;
    string sha = 2;
  }
}

message MsgSetBranchResponse {}

message MsgSetDefaultBranch {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string branch = 3;
}

message MsgSetDefaultBranchResponse { }

message MsgMultiSetBranch {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  repeated Branch branches = 3 [(gogoproto.nullable) = false];
  message Branch { 
    string name = 1;
    string sha = 2;
  }
}

message MsgMultiSetBranchResponse { }

message MsgDeleteBranch {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string branch = 3;
}

message MsgDeleteBranchResponse { }

message MsgMultiDeleteBranch {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  repeated string branches = 3;
}

message MsgMultiDeleteBranchResponse { }

message MsgSetTag {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  Tag tag = 3 [(gogoproto.nullable) = false];
  message Tag { 
    string name = 1;
    string sha = 2;
  }
}

message MsgSetTagResponse { }

message MsgMultiSetTag {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  repeated Tag tags = 3 [(gogoproto.nullable) = false];
  message Tag { 
    string name = 1;
    string sha = 2;
  }
}

message MsgMultiSetTagResponse { }

message MsgDeleteTag {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string tag = 3;
}

message MsgDeleteTagResponse { }

message MsgMultiDeleteTag {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  repeated string tags = 3;
}

message MsgMultiDeleteTagResponse { }

message MsgAddMember {
  string creator = 1;
  string daoId = 2;
  string userId = 3;
  MemberRole role = 4;
}

message MsgAddMemberResponse { }

message MsgUpdateMemberRole {
  string creator = 1;
  string daoId = 2;
  string userId = 3;
  MemberRole role = 4;
}

message MsgUpdateMemberRoleResponse {}

message MsgRemoveMember {
  string creator = 1;
  string daoId = 2;
  string userId = 3;
}

message MsgRemoveMemberResponse { }

message MsgCreateBounty {
  string creator = 1;
  repeated cosmos.base.v1beta1.Coin amount = 2
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"]; 
  int64 expiry = 3;
  uint64 repositoryId = 4;
  uint64 parentIid = 5;
  BountyParent parent = 6;
}

message MsgCreateBountyResponse {
  uint64 id = 1;
}

message MsgUpdateBountyExpiry {
  string creator = 1;
  uint64 id = 2;
  int64 expiry = 3;
}

message MsgUpdateBountyExpiryResponse {}

message MsgCloseBounty {
  string creator = 1;
  uint64 id = 2;
}

message MsgCloseBountyResponse {}

message MsgDeleteBounty {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteBountyResponse {}

// this line is used by starport scaffolding # proto/tx/message
message MsgCreateRelease {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string tagName = 3;
  string target = 4;
  string name = 5;
  string description = 6;
  string attachments = 7;
  bool draft = 8;
  bool preRelease = 9;
  bool isTag = 10;
}

message MsgCreateReleaseResponse {
  uint64 id = 1;
}

message MsgUpdateRelease {
  string creator = 1;
  uint64 id = 2;
  string tagName = 3;
  string target = 4;
  string name = 5;
  string description = 6;
  string attachments = 7;
  bool draft = 8;
  bool preRelease = 9;
  bool isTag = 10;
}

message MsgUpdateReleaseResponse { }

message MsgDeleteRelease {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteReleaseResponse { }

message MsgCreatePullRequest {
  string creator = 1;
  string title = 2;
  string description = 3;
  string headBranch = 4;
  RepositoryId headRepositoryId = 5 [(gogoproto.nullable) = false];
  string baseBranch = 6;
  RepositoryId baseRepositoryId = 7 [(gogoproto.nullable) = false];
  repeated string reviewers = 8;
  repeated string assignees = 9;
  repeated uint64 labelIds = 10;
}

message MsgCreatePullRequestResponse {
  uint64 id = 1;
  uint64 iid = 2;
}

message MsgUpdatePullRequestTitle {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  string title = 4;
}

message MsgUpdatePullRequestTitleResponse { }

message MsgUpdatePullRequestDescription {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  string description = 4;
}

message MsgUpdatePullRequestDescriptionResponse { }

message MsgInvokeMergePullRequest {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  string provider = 4;
}

message MsgInvokeMergePullRequestResponse { }

message MsgSetPullRequestState {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  string state = 4;
  string mergeCommitSha = 5;
  uint64 taskId = 6;
}

message MsgSetPullRequestStateResponse {
  string state = 1;
}

message MsgAddPullRequestReviewers {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  repeated string reviewers = 4;
}

message MsgAddPullRequestReviewersResponse { }

message MsgRemovePullRequestReviewers {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  repeated string reviewers = 4;
}

message MsgRemovePullRequestReviewersResponse { }

message MsgAddPullRequestAssignees {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  repeated string assignees = 4;
}

message MsgAddPullRequestAssigneesResponse { }

message MsgRemovePullRequestAssignees {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  repeated string assignees = 4;
}

message MsgRemovePullRequestAssigneesResponse { }

message MsgLinkPullRequestIssueByIid {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 pullRequestIid = 3;
  uint64 issueIid = 4;
}

message MsgLinkPullRequestIssueByIidResponse { }

message MsgUnlinkPullRequestIssueByIid {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 pullRequestIid = 3;
  uint64 issueIid = 4;
}

message MsgUnlinkPullRequestIssueByIidResponse { }

message MsgAddPullRequestLabels {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  repeated uint64 labelIds = 4;
}

message MsgAddPullRequestLabelsResponse { }

message MsgRemovePullRequestLabels {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  repeated uint64 labelIds = 4;
}

message MsgRemovePullRequestLabelsResponse { }

message MsgDeletePullRequest {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
}

message MsgDeletePullRequestResponse { }

message MsgCreateDao {
  string creator = 1;
  string name = 2;
  string description = 3;
  string avatarUrl = 4; 
  string location = 5; 
  string website = 6; 
}

message MsgCreateDaoResponse {
  string id = 1;
}

message MsgRenameDao {
  string creator = 1;
  string id = 2;
  string name = 3;
}

message MsgRenameDaoResponse { }

message MsgUpdateDaoDescription {
  string creator = 1;
  string id = 2;
  string description = 3;
}

message MsgUpdateDaoDescriptionResponse { }

message MsgUpdateDaoWebsite {
  string creator = 1;
  string id = 2;
  string url = 3;
}

message MsgUpdateDaoWebsiteResponse { }

message MsgUpdateDaoLocation {
  string creator = 1;
  string id = 2;
  string location = 3;
}

message MsgUpdateDaoLocationResponse { }

message MsgUpdateDaoAvatar {
  string creator = 1;
  string id = 2;
  string url = 3;
}

message MsgUpdateDaoAvatarResponse { }

message MsgDeleteDao {
  string creator = 1;
  string id = 2;
}

message MsgDeleteDaoResponse { }

message MsgCreateComment {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 parentIid = 3;
  CommentParent parent = 4;
  string body = 5;
  repeated Attachment attachments = 6; 
  string diffHunk = 7;
  string path = 8;
}

message MsgCreateCommentResponse {
  uint64 id = 1;
}

message MsgUpdateComment {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 parentIid = 3;
  CommentParent parent = 4;
  uint64 commentIid = 5;
  string body = 6;
  repeated Attachment attachments = 7;
}

message MsgUpdateCommentResponse { }

message MsgDeleteComment {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 parentIid = 3;
  CommentParent parent = 4;
  uint64 commentIid = 5;
}

message MsgDeleteCommentResponse { }

message MsgCreateIssue {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string title = 3;
  string description = 4;
  repeated uint64 labelIds = 5;
  uint64 weight = 6;
  repeated string assignees = 7;
  repeated cosmos.base.v1beta1.Coin bountyAmount = 8
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"]; 
  int64 bountyExpiry = 9;
}

message MsgCreateIssueResponse {
  uint64 id = 1;
  uint64 iid = 2;
}

message MsgUpdateIssueTitle {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  string title = 4;
}

message MsgUpdateIssueTitleResponse { }

message MsgUpdateIssueDescription {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  string description = 4;
}

message MsgUpdateIssueDescriptionResponse { }

message MsgToggleIssueState {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  string commentBody = 4;
}

message MsgToggleIssueStateResponse {
  string state = 1;
}

message MsgAddIssueAssignees {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  repeated string assignees = 4;
}

message MsgAddIssueAssigneesResponse { }

message MsgRemoveIssueAssignees {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  repeated string assignees = 4;
}

message MsgRemoveIssueAssigneesResponse { }

message MsgAddIssueLabels {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  repeated uint64 labelIds = 4;
}

message MsgAddIssueLabelsResponse { }

message MsgRemoveIssueLabels {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
  repeated uint64 labelIds = 4;
}

message MsgRemoveIssueLabelsResponse { }

message MsgDeleteIssue {
  string creator = 1;
  uint64 repositoryId = 2;
  uint64 iid = 3;
}

message MsgDeleteIssueResponse { }

message MsgCreateRepository {
  string creator = 1;
  string name = 2;
  string owner = 3;
  string description = 4;
}

message MsgCreateRepositoryResponse {
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
}

message MsgInvokeForkRepository {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string forkRepositoryName = 3;
  string branch = 4;
  string owner = 5;
  string provider = 6;
}

message MsgInvokeForkRepositoryResponse {}

message MsgForkRepository {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string forkRepositoryName = 3;
  string branch = 4;
  string owner = 5;
  uint64 taskId = 6;
}

message MsgForkRepositoryResponse {
  uint64 id = 1;
}

message MsgForkRepositorySuccess {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  uint64 taskId = 3;
}

message MsgForkRepositorySuccessResponse {
  uint64 id = 1;
}

message MsgRenameRepository {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string name = 3;
}

message MsgRenameRepositoryResponse { }

message MsgUpdateRepositoryDescription {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string description = 3;
}

message MsgUpdateRepositoryDescriptionResponse { }


message MsgChangeOwner {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string owner = 3;
}

message MsgChangeOwnerResponse { }

message MsgUpdateRepositoryCollaborator {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string user = 3;
  string role = 4;
}

message MsgUpdateRepositoryCollaboratorResponse { }

message MsgRemoveRepositoryCollaborator {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string user = 3;
}

message MsgRemoveRepositoryCollaboratorResponse { }

message MsgCreateRepositoryLabel {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  string name = 3;
  string color = 4;
  string description = 5;
}

message MsgCreateRepositoryLabelResponse { 
  uint64 id = 1;
}

message MsgUpdateRepositoryLabel {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  uint64 labelId = 3;
  string name = 4;
  string color = 5;
  string description = 6;
}

message MsgUpdateRepositoryLabelResponse { }

message MsgDeleteRepositoryLabel {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
  uint64 labelId = 3;
}

message MsgDeleteRepositoryLabelResponse { }

message MsgToggleRepositoryForking {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
}

message MsgToggleRepositoryForkingResponse { 
  bool allowForking = 1;
}

message MsgToggleArweaveBackup {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
}

message MsgToggleArweaveBackupResponse { 
  bool enableArweaveBackup = 1;
}

message MsgDeleteRepository {
  string creator = 1;
  RepositoryId repositoryId = 2 [(gogoproto.nullable) = false];
}

message MsgDeleteRepositoryResponse { }

message MsgCreateUser {
  string creator = 1;
  string username = 2;
  string name = 3;
  string avatarUrl = 4; 
  string bio = 5;
}

message MsgCreateUserResponse {
  string id = 1;
}

message MsgUpdateUserUsername {
  string creator = 1;
  string username = 2;
}

message MsgUpdateUserUsernameResponse { }

message MsgUpdateUserName {
  string creator = 1;
  string name = 2;
}

message MsgUpdateUserNameResponse { }

message MsgUpdateUserBio {
  string creator = 1;
  string bio = 2;
}

message MsgUpdateUserBioResponse { }

message MsgUpdateUserAvatar {
  string creator = 1;
  string url = 2;
}

message MsgUpdateUserAvatarResponse { }

message MsgDeleteUser {
  string creator = 1;
  string id = 2;
}

message MsgDeleteUserResponse { }

// message MsgTransferUser {
//   string creator = 1;
//   string address = 2;
// }

// message MsgTransferUserResponse { }
