syntax = "proto3";
package gitopia.gitopia.rewards;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "rewards/pool.proto";
import "rewards/params.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/gitopia/gitopia/v4/x/rewards/types";

// Msg defines the Msg service.
service Msg {
  rpc Claim(MsgClaim) returns (MsgClaimResponse);
  rpc CreateReward(MsgCreateReward) returns (MsgCreateRewardResponse);

  // UpdateParams defines a governance operation for updating the x/rewards module
  // parameters. The authority is hard-coded to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

message MsgCreateReward {
  string creator = 1;
  string recipient = 2;

  cosmos.base.v1beta1.Coin amount = 3
  [(gogoproto.nullable) = false, 
  (gogoproto.castkey) = "github.com/cosmos/cosmos-sdk/types.Coin"]; 

  Series series = 4;
}
message MsgCreateRewardResponse {
  // actual granted amount
  cosmos.base.v1beta1.Coin amount = 1 
  [(gogoproto.nullable) = false, 
  (gogoproto.castkey) = "github.com/cosmos/cosmos-sdk/types.Coin"]; 
}

// this line is used by starport scaffolding # proto/tx/message
message MsgClaim {
  string creator = 1;
}

message ClaimResponseReward {
  Series series = 1;
  cosmos.base.v1beta1.Coin amount = 2 
  [(gogoproto.nullable) = false, 
  (gogoproto.castkey) = "github.com/cosmos/cosmos-sdk/types.Coin"]; 
}

message MsgClaimResponse {
  repeated ClaimResponseReward claimed_rewards = 1;
  repeated ClaimResponseReward expired_rewards = 2;
  repeated ClaimResponseReward all_claimed_rewards = 3;
}

message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address of the governance account.
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the x/rewards parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateParamsResponse {}
