import { GeneratedType } from "@cosmjs/proto-signing";
import { MsgUpdateMemberRole } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateUserAvatar } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgMultiSetTag } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeleteTag } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgToggleRepositoryArchived } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgSetBranch } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgForkRepositorySuccess } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeletePullRequest } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeleteRepositoryLabel } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgAddPullRequestLabels } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateUserUsername } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgSetTag } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgMultiDeleteTag } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeleteTask } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeleteRepository } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgRevokeProviderPermission } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgCreateRelease } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateUserBio } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateIssueDescription } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateDaoAvatar } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgMultiSetBranch } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgInvokeMergePullRequest } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgAddIssueLabels } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgCreateComment } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdatePullRequestDescription } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgAddPullRequestReviewers } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateTask } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgRenameRepository } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgToggleIssueState } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUnlinkPullRequestIssueByIid } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateRelease } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeleteRelease } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgCreateIssue } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgToggleRepositoryForking } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgRemovePullRequestLabels } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgForkRepository } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgToggleCommentResolved } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateUserName } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeleteBounty } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgCreateDao } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgRenameDao } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgAddMember } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateIssueTitle } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgChangeOwner } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgCreateRepositoryLabel } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgCreateTask } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeleteBranch } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgCreatePullRequest } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgInvokeForkRepository } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgRemoveIssueLabels } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDistributePlatformIncentives } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateComment } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeleteUser } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgLinkPullRequestIssueByIid } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgAddIssueAssignees } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgExercise } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateUserPinnedRepositories } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgRemoveMember } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateBountyExpiry } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgRemovePullRequestReviewers } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeleteComment } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgCloseBounty } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgRemoveIssueAssignees } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateDaoWebsite } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateRepositoryDescription } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateRepositoryBackupRef } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgSetDefaultBranch } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgAddPullRequestAssignees } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateParams } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgToggleForcePush } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgToggleArweaveBackup } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdatePullRequestTitle } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateDaoDescription } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeleteIssue } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgCreateBounty } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgDeleteDao } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgCreateRepository } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgRemovePullRequestAssignees } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgAddRepositoryBackupRef } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateDaoPinnedRepositories } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateRepositoryCollaborator } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgRemoveRepositoryCollaborator } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgAuthorizeProvider } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgMultiDeleteBranch } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateRepositoryLabel } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgCreateUser } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgSetPullRequestState } from "./types/gitopia/gitopia/gitopia/tx";
import { MsgUpdateDaoLocation } from "./types/gitopia/gitopia/gitopia/tx";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/gitopia.gitopia.gitopia.MsgUpdateMemberRole", MsgUpdateMemberRole],
    ["/gitopia.gitopia.gitopia.MsgUpdateUserAvatar", MsgUpdateUserAvatar],
    ["/gitopia.gitopia.gitopia.MsgMultiSetTag", MsgMultiSetTag],
    ["/gitopia.gitopia.gitopia.MsgDeleteTag", MsgDeleteTag],
    ["/gitopia.gitopia.gitopia.MsgToggleRepositoryArchived", MsgToggleRepositoryArchived],
    ["/gitopia.gitopia.gitopia.MsgSetBranch", MsgSetBranch],
    ["/gitopia.gitopia.gitopia.MsgForkRepositorySuccess", MsgForkRepositorySuccess],
    ["/gitopia.gitopia.gitopia.MsgDeletePullRequest", MsgDeletePullRequest],
    ["/gitopia.gitopia.gitopia.MsgDeleteRepositoryLabel", MsgDeleteRepositoryLabel],
    ["/gitopia.gitopia.gitopia.MsgAddPullRequestLabels", MsgAddPullRequestLabels],
    ["/gitopia.gitopia.gitopia.MsgUpdateUserUsername", MsgUpdateUserUsername],
    ["/gitopia.gitopia.gitopia.MsgSetTag", MsgSetTag],
    ["/gitopia.gitopia.gitopia.MsgMultiDeleteTag", MsgMultiDeleteTag],
    ["/gitopia.gitopia.gitopia.MsgDeleteTask", MsgDeleteTask],
    ["/gitopia.gitopia.gitopia.MsgDeleteRepository", MsgDeleteRepository],
    ["/gitopia.gitopia.gitopia.MsgRevokeProviderPermission", MsgRevokeProviderPermission],
    ["/gitopia.gitopia.gitopia.MsgCreateRelease", MsgCreateRelease],
    ["/gitopia.gitopia.gitopia.MsgUpdateUserBio", MsgUpdateUserBio],
    ["/gitopia.gitopia.gitopia.MsgUpdateIssueDescription", MsgUpdateIssueDescription],
    ["/gitopia.gitopia.gitopia.MsgUpdateDaoAvatar", MsgUpdateDaoAvatar],
    ["/gitopia.gitopia.gitopia.MsgMultiSetBranch", MsgMultiSetBranch],
    ["/gitopia.gitopia.gitopia.MsgInvokeMergePullRequest", MsgInvokeMergePullRequest],
    ["/gitopia.gitopia.gitopia.MsgAddIssueLabels", MsgAddIssueLabels],
    ["/gitopia.gitopia.gitopia.MsgCreateComment", MsgCreateComment],
    ["/gitopia.gitopia.gitopia.MsgUpdatePullRequestDescription", MsgUpdatePullRequestDescription],
    ["/gitopia.gitopia.gitopia.MsgAddPullRequestReviewers", MsgAddPullRequestReviewers],
    ["/gitopia.gitopia.gitopia.MsgUpdateTask", MsgUpdateTask],
    ["/gitopia.gitopia.gitopia.MsgRenameRepository", MsgRenameRepository],
    ["/gitopia.gitopia.gitopia.MsgToggleIssueState", MsgToggleIssueState],
    ["/gitopia.gitopia.gitopia.MsgUnlinkPullRequestIssueByIid", MsgUnlinkPullRequestIssueByIid],
    ["/gitopia.gitopia.gitopia.MsgUpdateRelease", MsgUpdateRelease],
    ["/gitopia.gitopia.gitopia.MsgDeleteRelease", MsgDeleteRelease],
    ["/gitopia.gitopia.gitopia.MsgCreateIssue", MsgCreateIssue],
    ["/gitopia.gitopia.gitopia.MsgToggleRepositoryForking", MsgToggleRepositoryForking],
    ["/gitopia.gitopia.gitopia.MsgRemovePullRequestLabels", MsgRemovePullRequestLabels],
    ["/gitopia.gitopia.gitopia.MsgForkRepository", MsgForkRepository],
    ["/gitopia.gitopia.gitopia.MsgToggleCommentResolved", MsgToggleCommentResolved],
    ["/gitopia.gitopia.gitopia.MsgUpdateUserName", MsgUpdateUserName],
    ["/gitopia.gitopia.gitopia.MsgDeleteBounty", MsgDeleteBounty],
    ["/gitopia.gitopia.gitopia.MsgCreateDao", MsgCreateDao],
    ["/gitopia.gitopia.gitopia.MsgRenameDao", MsgRenameDao],
    ["/gitopia.gitopia.gitopia.MsgAddMember", MsgAddMember],
    ["/gitopia.gitopia.gitopia.MsgUpdateIssueTitle", MsgUpdateIssueTitle],
    ["/gitopia.gitopia.gitopia.MsgChangeOwner", MsgChangeOwner],
    ["/gitopia.gitopia.gitopia.MsgCreateRepositoryLabel", MsgCreateRepositoryLabel],
    ["/gitopia.gitopia.gitopia.MsgCreateTask", MsgCreateTask],
    ["/gitopia.gitopia.gitopia.MsgDeleteBranch", MsgDeleteBranch],
    ["/gitopia.gitopia.gitopia.MsgCreatePullRequest", MsgCreatePullRequest],
    ["/gitopia.gitopia.gitopia.MsgInvokeForkRepository", MsgInvokeForkRepository],
    ["/gitopia.gitopia.gitopia.MsgRemoveIssueLabels", MsgRemoveIssueLabels],
    ["/gitopia.gitopia.gitopia.MsgDistributePlatformIncentives", MsgDistributePlatformIncentives],
    ["/gitopia.gitopia.gitopia.MsgUpdateComment", MsgUpdateComment],
    ["/gitopia.gitopia.gitopia.MsgDeleteUser", MsgDeleteUser],
    ["/gitopia.gitopia.gitopia.MsgLinkPullRequestIssueByIid", MsgLinkPullRequestIssueByIid],
    ["/gitopia.gitopia.gitopia.MsgAddIssueAssignees", MsgAddIssueAssignees],
    ["/gitopia.gitopia.gitopia.MsgExercise", MsgExercise],
    ["/gitopia.gitopia.gitopia.MsgUpdateUserPinnedRepositories", MsgUpdateUserPinnedRepositories],
    ["/gitopia.gitopia.gitopia.MsgRemoveMember", MsgRemoveMember],
    ["/gitopia.gitopia.gitopia.MsgUpdateBountyExpiry", MsgUpdateBountyExpiry],
    ["/gitopia.gitopia.gitopia.MsgRemovePullRequestReviewers", MsgRemovePullRequestReviewers],
    ["/gitopia.gitopia.gitopia.MsgDeleteComment", MsgDeleteComment],
    ["/gitopia.gitopia.gitopia.MsgCloseBounty", MsgCloseBounty],
    ["/gitopia.gitopia.gitopia.MsgRemoveIssueAssignees", MsgRemoveIssueAssignees],
    ["/gitopia.gitopia.gitopia.MsgUpdateDaoWebsite", MsgUpdateDaoWebsite],
    ["/gitopia.gitopia.gitopia.MsgUpdateRepositoryDescription", MsgUpdateRepositoryDescription],
    ["/gitopia.gitopia.gitopia.MsgUpdateRepositoryBackupRef", MsgUpdateRepositoryBackupRef],
    ["/gitopia.gitopia.gitopia.MsgSetDefaultBranch", MsgSetDefaultBranch],
    ["/gitopia.gitopia.gitopia.MsgAddPullRequestAssignees", MsgAddPullRequestAssignees],
    ["/gitopia.gitopia.gitopia.MsgUpdateParams", MsgUpdateParams],
    ["/gitopia.gitopia.gitopia.MsgToggleForcePush", MsgToggleForcePush],
    ["/gitopia.gitopia.gitopia.MsgToggleArweaveBackup", MsgToggleArweaveBackup],
    ["/gitopia.gitopia.gitopia.MsgUpdatePullRequestTitle", MsgUpdatePullRequestTitle],
    ["/gitopia.gitopia.gitopia.MsgUpdateDaoDescription", MsgUpdateDaoDescription],
    ["/gitopia.gitopia.gitopia.MsgDeleteIssue", MsgDeleteIssue],
    ["/gitopia.gitopia.gitopia.MsgCreateBounty", MsgCreateBounty],
    ["/gitopia.gitopia.gitopia.MsgDeleteDao", MsgDeleteDao],
    ["/gitopia.gitopia.gitopia.MsgCreateRepository", MsgCreateRepository],
    ["/gitopia.gitopia.gitopia.MsgRemovePullRequestAssignees", MsgRemovePullRequestAssignees],
    ["/gitopia.gitopia.gitopia.MsgAddRepositoryBackupRef", MsgAddRepositoryBackupRef],
    ["/gitopia.gitopia.gitopia.MsgUpdateDaoPinnedRepositories", MsgUpdateDaoPinnedRepositories],
    ["/gitopia.gitopia.gitopia.MsgUpdateRepositoryCollaborator", MsgUpdateRepositoryCollaborator],
    ["/gitopia.gitopia.gitopia.MsgRemoveRepositoryCollaborator", MsgRemoveRepositoryCollaborator],
    ["/gitopia.gitopia.gitopia.MsgAuthorizeProvider", MsgAuthorizeProvider],
    ["/gitopia.gitopia.gitopia.MsgMultiDeleteBranch", MsgMultiDeleteBranch],
    ["/gitopia.gitopia.gitopia.MsgUpdateRepositoryLabel", MsgUpdateRepositoryLabel],
    ["/gitopia.gitopia.gitopia.MsgCreateUser", MsgCreateUser],
    ["/gitopia.gitopia.gitopia.MsgSetPullRequestState", MsgSetPullRequestState],
    ["/gitopia.gitopia.gitopia.MsgUpdateDaoLocation", MsgUpdateDaoLocation],
    
];

export { msgTypes }